# SPYPROPHET

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  app.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  tastytrade_provider.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: README.md  __init__.py  brief_engine.py  deps.py  main.py  market_data.py  schemas.py  structure.py
api/routes/: brief.py  chart.py  health.py  intel.py  journal.py  live.py  options.py  quotes.py  replay.py  structure.py
assets/: app.css
spyprophet_core/: __init__.py  secrets.py
tests/: test_api_health.py  test_api_journal.py  test_api_live.py  test_api_market_data.py  test_api_options.py  test_api_quotes.py  test_api_structure.py  test_app_smoke.py  test_bias_and_strikes.py  test_chart.py  test_decision_quality.py  test_import_safety.py  test_journal.py  test_lines.py  test_market_context.py  test_morning_briefing.py  test_options_cockpit.py  test_pivots.py  test_replay.py  test_signals.py  test_spyprophet_core_secrets.py  test_tastytrade_provider.py  test_time_and_data.py  test_ui_format_helpers.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: ai-brief-generator.tsx  animated-number.tsx  brand-mark.tsx  command-strip.tsx  journal-import.tsx  live-chart.tsx  mobile-nav.tsx  nav-rail.tsx  replay-player.tsx  reveal.tsx  session-strip.tsx  soon-page.tsx  spotlight-card.tsx  strike-quote-panel.tsx  (+3 more)
(+13 files in other folders)
