[project]
name = "spyprophet"
version = "0.1.0"
description = "Analysis-only Streamlit terminal for same-day SPY structure workflows."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "N", "S"]
ignore = ["E501", "S101", "S311", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
